# c-sparcli

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  clean-up.todo.md  compile_flags.txt  sparcli 2  sparcli 2.pc  sparcli.pc.in
.github/workflows/: ci.yml
bindings/python/: .gitignore  README.md  build_sparcli.py  pyproject.toml  setup.py
bindings/python/examples/: demo.py  input_demo.py  output_gallery.py
bindings/python/src/sparcli/: __init__.py  _ffi.py  _inputcommon.py  app.py  capture.py  color.py  columns.py  diff.py  enums.py  errors.py  form.py  humanize.py  input.py  keys.py  log.py  markup.py  multiprogress.py  output.py  progress.py  select.py  structures.py  style.py  table.py  text.py  theme.py
bindings/python/tests/: conftest.py  test_smoke.py
bindings/rust/: .gitignore  Cargo.toml
bindings/rust/sparcli/: Cargo.toml  rustfmt.toml
bindings/rust/sparcli-sys/: Cargo.toml  build.rs
bindings/rust/sparcli-sys/src/: bindings.rs  lib.rs
bindings/rust/sparcli/examples/: demo.rs  input_demo.rs  output_gallery.rs
bindings/rust/sparcli/src/: app.rs  error.rs  humanize.rs  input.rs  lib.rs  logging.rs  output.rs  style.rs  text.rs
bindings/rust/sparcli/tests/: smoke.rs
cli/: cli_commands.h  cli_common.c  cli_common.h  cli_csv.c  cli_csv.h  cli_parse.c  cli_parse.h  cli_stdin.c  cli_stdin.h  cmd_input.c  cmd_layout.c  cmd_output.c  cmd_progress.c  cmd_select.c  cmd_table.c  cmd_tree.c  main.c
completions/: _sparcli
docs/: API.md  DEVELOPMENT.md  api-c.md  api-cpp.md  api-framework.md  api-python.md  api-rust.md  api-serde.md  api.md  cli.md  development.md  examples.md  windows.md
examples/: args_demo.c  cli_input_demo.zsh  cli_output_demo.zsh  cpp_demo.cpp  input_demo.c  live_demo.c  readme_screenshots  readme_screenshots.c  readme_screenshots_input.c  readme_screenshots_output.c  repl_dashboard.c  repl_demo.c  repl_minimal.c  run.zsh  shortcut_demo.c
examples/cli/: input_demo.zsh  output_demo.zsh
include/: sparcli.h  sparcli.hpp  sparcli_alert.h  sparcli_align.h  sparcli_badge.h  sparcli_capture.h  sparcli_columns.h  sparcli_core.h  sparcli_export.h  sparcli_kv.h  sparcli_list.h  sparcli_markup.h  sparcli_output.h  sparcli_pad.h  sparcli_panel.h  sparcli_progressbar.h  sparcli_rendered.h  sparcli_rule.h  sparcli_spinner.h  sparcli_table.h  sparcli_text.h  sparcli_tree.h  sparcli_types.h  sparcli_util.h
include/app/: sparcli_app.h  sparcli_config.h  sparcli_config.hpp  sparcli_error.h  sparcli_paths.h  sparcli_process.h
include/args/: sparcli_args.h
include/core/: sparcli_core.h  sparcli_export.h  sparcli_humanize.h  sparcli_output.h  sparcli_palette.h  sparcli_rendered.h  sparcli_text.h
include/input/: sparcli_confirm.h  sparcli_datepicker.h  sparcli_editor.h  sparcli_form.h  sparcli_fuzzy.h  sparcli_history.h  sparcli_input.h  sparcli_number.h  sparcli_select.h  sparcli_shortcut.h  sparcli_term.h  sparcli_text_input.h  sparcli_textarea.h  sparcli_theme.h
include/log/: sparcli_log.h
include/output/: sparcli_alert.h  sparcli_align.h  sparcli_badge.h  sparcli_capture.h  sparcli_columns.h  sparcli_diff.h  sparcli_kv.h  sparcli_list.h  sparcli_live.h  sparcli_markup.h  sparcli_multiprogress.h  sparcli_pad.h  sparcli_pager.h  sparcli_panel.h  sparcli_progressbar.h  sparcli_rule.h  sparcli_spinner.h  sparcli_table.h  sparcli_tree.h  sparcli_util.h
include/platform/: sc_compat.h
include/serde/: sparcli_csv.h  sparcli_json.h  sparcli_markdown.h  sparcli_parse_error.h  sparcli_serde.h  sparcli_serde.hpp  sparcli_toml.h  sparcli_value.h  sparcli_yaml.h
include/view/: sparcli_markdown_render.h  sparcli_value_render.h  sparcli_view.h  sparcli_view.hpp
src/: alert.c  badge.c  color.c  columns.c  internal.h  kv.c  list.c  markup.c  output.c  pad.c  panel.c  print.c  progressbar.c  render_wrap.c  render_wrap.h  rule.c  spinner.c  style.c  table.c  table_internal.h  table_print.c  table_print_init.c  table_print_render.c  text.c  text_attributes.c  text_internal.h  tree.c  util.c  util.h  version.c
src/app/: config.c  error.c  paths.c  process.c
src/args/: args.c  args_complete.c  args_complete_bash.c  args_complete_fish.c  args_help.c  args_internal.h  args_parse.c  args_split.c  args_suggest.c  args_value.c
src/core/: color.c  humanize.c  memstream.c  output.c  print.c  render_wrap.c  sanitize.c  sanitize_internal.h  sc_memstream.h  text.c  text_attributes.c  text_internal.h
src/input/: calc.c  confirm.c  datepicker.c  editor.c  editor_file.c  form.c  fuzzy.c  history.c  input_internal.h  line_editor.c  number_input.c  password_input.c  prompt.c  select.c  shortcut.c  shortcut_help.c  text_input.c  textarea.c  theme.c
src/log/: log.c
src/output/: alert.c  badge.c  columns.c  diff.c  kv.c  list.c  live.c  markup.c  multiprogress.c  pad.c  pager.c  panel.c  progressbar.c  rule.c  spinner.c  tree.c  util.c
src/serde/: buf.c  csv.c  file.c  json.c  markdown.c  parse_error.c  serde_internal.h  toml.c  value.c  yaml.c
src/table/: table.c  (+7 more)
tests/: test_alert.c  test_align.c  test_badge.c  test_colors.c  test_columns.c  test_columns_basic.c  test_kv.c  test_lists.c  test_main  test_main.c  test_main_sanitize  test_markup.c  test_pad.c  test_panels.c  test_progressbar.c  test_rules.c  test_spinner.c  test_styles.c  test_tables.c  test_text_attributes.c  test_trees.c  test_util.c
(+273 files in other folders)
