[build-system]
requires = ["setuptools>=61", "cffi>=1.15", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparcli"
version = "0.1.0"
description = "Styled terminal output and interactive input widgets (Python bindings for the sparcli C library)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Corvin Gröning" }]
keywords = ["terminal", "cli", "tui", "ansi", "color", "table", "prompt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["cffi>=1.15"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sparcli = ["py.typed"]

# The cffi extension is wired through setup.py's `cffi_modules` keyword
# (setuptools has no pyproject table for it); see setup.py.
